--- a/package.json
+++ b/package.json
@@ -26,19 +26,24 @@
     "url": "https://github.com/nkalinov/ng2-datetime.git"
   },
   "dependencies": {
-    "bootstrap": ">=3.0.0",
-    "bootstrap-datepicker": "1.7.0-RC1",
+    "@angular/animations": "^5.2.3",
+    "@angular/compiler-cli": "^5.2.3",
+    "@angular/http": "^5.2.3",
+    "@angular/platform-server": "^5.2.3",
+    "@angular/router": "^5.2.3",
+    "bootstrap": "^4.0.0",
+    "bootstrap-datepicker": "^1.7.1",
     "bootstrap-timepicker": "^0.5.2",
     "font-awesome": "^4.7.0",
     "jquery": ">=2.2.1"
   },
   "devDependencies": {
-    "@angular/common": "^4.0.3",
-    "@angular/compiler": "^4.0.3",
-    "@angular/core": "^4.0.3",
-    "@angular/forms": "^4.0.3",
-    "@angular/platform-browser": "^4.0.3",
-    "@angular/platform-browser-dynamic": "^4.0.3",
+    "@angular/common": "^5.2.3",
+    "@angular/compiler": "^5.2.3",
+    "@angular/core": "^5.2.3",
+    "@angular/forms": "^5.2.3",
+    "@angular/platform-browser": "^5.2.3",
+    "@angular/platform-browser-dynamic": "^5.2.3",
     "@types/core-js": "^0.9.35",
     "@types/jasmine": "^2.5.40",
     "@types/jquery": "^2.0.37",
@@ -65,7 +70,7 @@
     "rxjs": "^5.0.2",
     "style-loader": "^0.13.1",
     "tslint": "^4.5.1",
-    "typescript": "^2.2.2",
+    "typescript": "^2.4.2",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.14.0",
